Refactor ValidatorService for safer request handling